[gd_scene load_steps=10 format=3 uid="uid://b6ugxlnqk3o76"]

[ext_resource type="Script" path="res://spawn_point.gd" id="1_lwm3y"]
[ext_resource type="Script" path="res://respawn_point.gd" id="1_omnlx"]
[ext_resource type="Texture2D" uid="uid://18gnny251y3r" path="res://resources/sprites/respawn_active.png" id="3_6tse7"]
[ext_resource type="Texture2D" uid="uid://11pgpx3wh53q" path="res://resources/sprites/respawn_inactive.png" id="4_nia8s"]
[ext_resource type="Texture2D" uid="uid://jm2a5564r3qi" path="res://resources/sprites/particles/hollow_circle.png" id="5_j52hs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wpexs"]
size = Vector2(4, 4)

[sub_resource type="Gradient" id="Gradient_3gshw"]
offsets = PackedFloat32Array(0, 0.237705, 0.557377, 1)
colors = PackedColorArray(0, 1, 1, 1, 0.25098, 0.556863, 0.733333, 1, 0.587003, 0.579631, 0.379066, 1, 0, 0.772549, 0.580392, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_oug36"]
gradient = SubResource("Gradient_3gshw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_06o30"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 8.0
emission_ring_radius = 8.0
emission_ring_inner_radius = 8.0
angular_velocity_min = 720.0
angular_velocity_max = 720.0
orbit_velocity_min = -0.0219999
orbit_velocity_max = -0.0219999
gravity = Vector3(0, 0, 0)
radial_accel_min = -24.73
radial_accel_max = -24.73
tangential_accel_min = -5.38
tangential_accel_max = -5.38
scale_min = 0.3
scale_max = 0.3
color_ramp = SubResource("GradientTexture1D_oug36")

[node name="RespawnPoint" type="Area2D" node_paths=PackedStringArray("spawn_point", "active_sprite", "inactive_sprite", "particles")]
scale = Vector2(5, 5)
script = ExtResource("1_omnlx")
spawn_point = NodePath("SpawnPoint")
active_sprite = NodePath("ActiveSprite")
inactive_sprite = NodePath("InactiveSprite")
particles = NodePath("GPUParticles2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.38419e-07)
shape = SubResource("RectangleShape2D_wpexs")

[node name="SpawnPoint" type="Node2D" parent="."]
script = ExtResource("1_lwm3y")

[node name="ActiveSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 2.38419e-07)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_6tse7")

[node name="InactiveSprite" type="Sprite2D" parent="."]
position = Vector2(0, 2.38419e-07)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_nia8s")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 1000
process_material = SubResource("ParticleProcessMaterial_06o30")
texture = ExtResource("5_j52hs")
lifetime = 2.0
one_shot = true
trail_enabled = true
trail_lifetime = 0.1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
